--- a/src/main/resources/webview/conclusion/conclusion.html
+++ b/src/main/resources/webview/conclusion/conclusion.html
@@ -8,11 +8,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.20.1/vis.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.20.1/vis.min.css"></script>
 
-    <!--Bootstrap-->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></script>
-
     <script src="conclusion.js"></script>
+    "<script src='../common/util.js'></script>"
 
     <style>
         body {
