Serveur fonctionne avec des webjars, diverses réparations. Installer/restaurer présentation bâti, pas testé.

--- a/src/main/resources/public/conclusion/conclusion.html
+++ b/src/main/resources/public/conclusion/conclusion.html
@@ -5,8 +5,8 @@
     <title>Conclusion</title>
 
     <!--vis.js-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.20.1/vis.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.20.1/vis.min.css"></script>
+    <script src="/webjars/visjs/4.20.1/vis.min.js"></script>
+    <link href="/webjars/visjs/4.20.1/vis.min.css" rel="stylesheet" type="text/css"/>
 
     <script src="conclusion.js"></script>
     "<script src='../common/util.js'></script>"
