Installer/restaurer marche, Graph ne sérialise plus le texton 0 (nécessaire pour fonctionnement interne seulement)

--- a/src/main/resources/public/conclusion/conclusion.html
+++ b/src/main/resources/public/conclusion/conclusion.html
@@ -9,7 +9,7 @@
     <link href="/webjars/visjs/4.20.1/vis.min.css" rel="stylesheet" type="text/css"/>
 
     <script src="conclusion.js"></script>
-    "<script src='../common/util.js'></script>"
+    <script src="../common/util.js"></script>
 
     <style>
         body {
