Conclusion fonctionnelle, vote fonctionnel.

--- a/src/main/resources/public/builder/builder.html
+++ b/src/main/resources/public/builder/builder.html
@@ -6,8 +6,8 @@
     <script src="/webjars/visjs/4.20.1/vis.min.js"></script>
     <link href="/webjars/visjs/4.20.1/vis.min.css" rel="stylesheet" type="text/css"/>
 
+    <script src="../common/options.js"></script>
     <script src="builder.js"></script>
-    <!--<script src='../common/util.js'></script>-->
     <meta charset="UTF-8">
     <title>Visualisation du graphe</title>
     <style>
