--- a/src/main/resources/public/conclusion/conclusion.html
+++ b/src/main/resources/public/conclusion/conclusion.html
@@ -8,13 +8,14 @@
     <script src="/webjars/visjs/4.20.1/vis.min.js"></script>
     <link href="/webjars/visjs/4.20.1/vis.min.css" rel="stylesheet" type="text/css"/>
 
+    <script src="../common/options.js"></script>
     <script src="conclusion.js"></script>
-    <script src="../common/util.js"></script>
 
     <style>
         body {
-            background-color:#333333;
+            background-color: beige;
         }
+
         .expand {
             position: fixed;
             width: 100%;
@@ -25,6 +26,6 @@
     </style>
 </head>
 <body>
-<div id="network" class="expand" ></div>
+<div id="network" class="expand"></div>
 </body>
 </html>
