Tests faits au colloquium, commentaire du public inscrits en TODOs.

--- a/src/main/resources/public/builder/builder.html
+++ b/src/main/resources/public/builder/builder.html
@@ -6,13 +6,13 @@
     <script src="/webjars/visjs/4.20.1/vis.min.js"></script>
     <link href="/webjars/visjs/4.20.1/vis.min.css" rel="stylesheet" type="text/css"/>
 
-    <script src="../common/options.js"></script>
+    <script src="../common/common.js"></script>
     <script src="builder.js"></script>
     <meta charset="UTF-8">
     <title>Visualisation du graphe</title>
     <style>
         body {
-            background-color: #333333;
+            background-color: beige;
         }
 
         .expand {
