--- a/src/main/resources/public/conclusion/conclusion.html
+++ b/src/main/resources/public/conclusion/conclusion.html
@@ -8,7 +8,7 @@
     <script src="/webjars/visjs/4.20.1/vis.min.js"></script>
     <link href="/webjars/visjs/4.20.1/vis.min.css" rel="stylesheet" type="text/css"/>
 
-    <script src="../common/options.js"></script>
+    <script src="../common/common.js"></script>
     <script src="conclusion.js"></script>
 
     <style>
