--- a/src/main/resources/public/test/test.html
+++ b/src/main/resources/public/test/test.html
@@ -6,7 +6,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.20.1/vis.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.20.1/vis.min.css" type="text/css" rel="stylesheet"/>
-    <script src="../common/options.js"></script>
+    <script src="../common/common.js"></script>
     <script src="test.js"></script>
     <style>
         .expand {
